Fixed text errors and spacing on the headers.

--- a/frontend_react/src/container/Contact/Contact.scss
+++ b/frontend_react/src/container/Contact/Contact.scss
@@ -14,13 +14,22 @@
 
 .contact__header {
   display: flex;
-  justify-self: flex-start;
-  align-self: flex-start;
+  margin-bottom: 1rem;
+  align-items: center;
   img {
-    width: 4.5vw;
-    height: 4.5vw;
-
-    margin: 1vw 1vw 1vw 0;
+    width: 4.2vw;
+    height: 4.2vw;
+    margin-right: 1vw;
+  }
+  @media (max-width: 767px) {
+    margin-bottom: 0.75rem;
+    h1 {
+      font-size: 2.75rem;
+    }
+    img {
+      width: 2.75rem;
+      margin-right: 0.75rem;
+    }
   }
 }
 
@@ -55,7 +64,7 @@
 .contact__text {
   display: flex;
   flex-direction: column;
-  font-size: 2.2rem;
+  font-size: 3.75vw;
   margin-left: 0.5vw;
 }
 
