--- a/frontend_react/src/container/Projects/Projects.scss
+++ b/frontend_react/src/container/Projects/Projects.scss
@@ -23,11 +23,11 @@
 .project__header {
   display: flex;
   margin-bottom: 1rem;
+  align-items: center;
   img {
     width: 4.2vw;
     height: 4.2vw;
-    margin-right: 1rem;
-    margin-top: 0.9vw;
+    margin-right: 1vw;
   }
   @media (max-width: 767px) {
     margin-bottom: 0.75rem;
