--- a/frontend_react/src/container/Skills/Skills.scss
+++ b/frontend_react/src/container/Skills/Skills.scss
@@ -26,6 +26,7 @@
 .skills__header {
   display: flex;
   margin-bottom: 1rem;
+  align-items: center;
   img {
     width: 4.2vw;
     height: 5.6vw;
